// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`BundleManager matches snapshot when installing a bundle 1`] = `
"<div data-v-d255ffee="" class="ipl-space color-secondary no-padding">
  <div class="header layout horizontal center-vertical">
    <div class="bold grow m-l-4"> Bundles </div>
    <ipl-button-stub icon="sync" color="blue" disabled="false" async="true" progressmessage="Working..." successmessage="Done!" requiresconfirmation="false" shortconfirmationmessage="false" small="true" disableonsuccess="false" inline="false" tooltip="Refresh" class="button" data-test="refresh-button"></ipl-button-stub>
    <ipl-button-stub icon="plus-circle" color="green" disabled="false" async="false" progressmessage="Working..." successmessage="Done!" requiresconfirmation="false" shortconfirmationmessage="false" small="true" disableonsuccess="false" inline="false" tooltip="Install new bundle" class="button m-l-4" data-test="install-new-bundle-button"></ipl-button-stub>
  </div>
  <bundle-installer-stub class="m-b-8 m-x-8" style="display: none;"></bundle-installer-stub>
  <div class="status-text max-width"> No bundles found. </div>
</div>"
`;

exports[`BundleManager matches snapshot with bundle data 1`] = `
"<div data-v-d255ffee="" class="ipl-space color-secondary no-padding">
  <div class="header layout horizontal center-vertical">
    <div class="bold grow m-l-4"> Bundles </div>
    <ipl-button-stub icon="sync" color="blue" disabled="false" async="true" progressmessage="Working..." successmessage="Done!" requiresconfirmation="false" shortconfirmationmessage="false" small="true" disableonsuccess="false" inline="false" tooltip="Refresh" class="button" data-test="refresh-button"></ipl-button-stub>
    <ipl-button-stub icon="plus-circle" color="green" disabled="false" async="false" progressmessage="Working..." successmessage="Done!" requiresconfirmation="false" shortconfirmationmessage="false" small="true" disableonsuccess="false" inline="false" tooltip="Install new bundle" class="button m-l-4" data-test="install-new-bundle-button"></ipl-button-stub>
  </div>
  <bundle-installer-stub class="m-b-8 m-x-8" style="display: none;"></bundle-installer-stub>
  <div class="bundle-settings__wrapper max-width">
    <div class="bundle-settings__header">
      <div class="bold"> Name </div>
      <div class="bold"> Version </div>
      <div class="max-width"></div>
    </div>
    <div data-test="bundle_Bundle One" class="bundle-settings__item">
      <div class="bundle-settings__item-content">
        <div>Bundle One</div>
        <div>1.2.3</div>
        <div class="layout horizontal end-horizontal">
          <ipl-button-stub icon="cog" color="blue" disabled="false" async="false" progressmessage="Working..." successmessage="Done!" requiresconfirmation="false" shortconfirmationmessage="false" small="true" disableonsuccess="false" inline="false" data-test="configure-button"></ipl-button-stub>
          <ipl-button-stub icon="trash-alt" color="red" disabled="false" async="false" progressmessage="Working..." successmessage="Done!" requiresconfirmation="false" shortconfirmationmessage="false" small="true" disableonsuccess="false" inline="false" tooltip="Uninstall" class="uninstall-button m-l-4" data-test="uninstall-button"></ipl-button-stub>
        </div>
      </div>
      <!--v-if-->
    </div>
    <div data-test="bundle_Bundle Two" class="bundle-settings__item">
      <div class="bundle-settings__item-content">
        <div>Bundle Two</div>
        <div>5.0</div>
        <div class="layout horizontal end-horizontal">
          <ipl-button-stub icon="cog" color="blue" disabled="false" async="false" progressmessage="Working..." successmessage="Done!" requiresconfirmation="false" shortconfirmationmessage="false" small="true" disableonsuccess="false" inline="false" data-test="configure-button"></ipl-button-stub>
          <ipl-button-stub icon="trash-alt" color="red" disabled="false" async="false" progressmessage="Working..." successmessage="Done!" requiresconfirmation="false" shortconfirmationmessage="false" small="true" disableonsuccess="false" inline="false" tooltip="Uninstall" class="uninstall-button m-l-4" data-test="uninstall-button"></ipl-button-stub>
        </div>
      </div>
      <!--v-if-->
    </div>
    <!--v-if-->
  </div>
</div>"
`;
